8250840: some tests use --enable-preview unnecessarily
Reviewed-by: vromero